--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Smart Chinese</string>
     <string name="button_next">Next</string>
+    <string name="channel_name">Default</string>
+    <string name="channel_description">Default notifications</string>
+    <string name="notification">Learn more Chinese words</string>
 </resources>
